Remove PermSize JVM option
fixes #167