@@ -151,7 +151,7 @@
           <repositoryLayout>flat</repositoryLayout>
           <repositoryName>lib</repositoryName>
           <endorsedDir>lib</endorsedDir>
-          <extraJvmArguments>-Xms500m -Xmx500m -XX:PermSize=128m -XX:-UseGCOverheadLimit</extraJvmArguments>
+          <extraJvmArguments>-Xms500m -Xmx500m -XX:-UseGCOverheadLimit</extraJvmArguments>
           <binFileExtensions>
             <windows>.cmd</windows>
           </binFileExtensions>
